Fix progress bar on small screens

--- a/site/themes/mttt/sass/_media.queries.scss
+++ b/site/themes/mttt/sass/_media.queries.scss
@@ -1,7 +1,10 @@
 // @media only screen and (min-width: 768px) { … }
 @media only screen and (max-width: 767px) {
   html, body { font-size: 18px; }
-  .navbar { padding-left: .5rem; }
+  .navbar {
+    padding-left: .5rem;
+    .scrollprogress { margin-left: -.5rem; }
+  }
 }
 
 @media only screen and (max-width: 479px) {
